--- a/Backend/pyproject.toml
+++ b/Backend/pyproject.toml
@@ -8,8 +8,12 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "fastapi (>=0.115.12,<0.116.0)",
+    "uvicorn (>=0.34.1,<0.35.0)",
+    "pydantic-settings (>=2.8.1,<3.0.0)",
+    "sqlalchemy (>=2.0.40,<3.0.0)",
+    "email-validator (>=2.2.0,<3.0.0)"
 ]
-
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
