--- a/Backend/pyproject.toml
+++ b/Backend/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "uvicorn (>=0.34.1,<0.35.0)",
     "pydantic-settings (>=2.8.1,<3.0.0)",
     "sqlalchemy (>=2.0.40,<3.0.0)",
-    "email-validator (>=2.2.0,<3.0.0)"
+    "email-validator (>=2.2.0,<3.0.0)",
+    "alembic (>=1.15.2,<2.0.0)"
 ]
 
 [build-system]
